--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"front-matter": "^4.0.2",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"remark": "^14.0.2",
 		"sharp": "^0.30.7",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
