--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"front-matter": "^4.0.2",
+		"mdast-util-from-markdown": "^1.2.0",
+		"mdast-util-to-hast": "^12.2.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
-		"remark": "^14.0.2",
 		"sharp": "^0.30.7",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
