--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,7 @@ collections:
     label: Posts # used in the ui
     folder: src/content/posts # path to the folder where the documents are stored
     create: true # allow users to create new documents in this collection
-    slug: '{{slug}}' # filename template, e.g., YYYY-MM-DD-title.md
+    slug: '{{slug}}' # filename template, e.g. YYYY-MM-DD-title.md
     fields: # fields for each document in front matter
       - { label: Title, name: title, widget: string }
       - { label: Description, name: description, widget: text }
