--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"mdast-util-to-hast": "^12.3.0",
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
+		"sass": "^1.62.1",
 		"sharp": "^0.31.3",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
