--- a/package.json
+++ b/package.json
@@ -20,19 +20,21 @@
 		"eslint": "^8.34.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"front-matter": "^4.0.2",
-		"mdast-util-from-markdown": "^1.3.0",
-		"mdast-util-to-hast": "^12.3.0",
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"sass": "^1.62.1",
-		"sharp": "^0.31.3",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^5.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
+	},
+	"dependencies": {
+		"front-matter": "^4.0.2",
+		"mdast-util-from-markdown": "^1.3.0",
+		"mdast-util-to-hast": "^12.3.0",
+		"sharp": "^0.31.3"
 	},
 	"type": "module"
 }
