--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "sveltekit-netlifycms",
-	"version": "0.0.1",
+	"name": "sveltekit-decapcms",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
