--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.0",
-		"@types/node": "^20.11.19",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
-		"@typescript-eslint/parser": "^7.0.0",
-		"eslint": "^8.56.0",
+		"@types/eslint": "^8.56.7",
+		"@types/node": "^20.14.8",
+		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"sass": "^1.71.1",
-		"svelte": "^4.2.7",
+		"sass": "^1.77.6",
+		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
-		"svelte-preprocess": "^5.1.3",
+		"svelte-preprocess": "^6.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
 		"front-matter": "^4.0.2",
-		"mdast-util-from-markdown": "^2.0.0",
-		"mdast-util-to-hast": "^13.1.0",
-		"sharp": "^0.33.2"
+		"mdast-util-from-markdown": "^2.0.1",
+		"mdast-util-to-hast": "^13.2.0",
+		"sharp": "^0.33.4"
 	},
 	"type": "module"
 }
