--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.2",
+		"@sveltejs/adapter-netlify": "^4.3.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
@@ -35,8 +35,7 @@
 	"dependencies": {
 		"front-matter": "^4.0.2",
 		"mdast-util-from-markdown": "^2.0.1",
-		"mdast-util-to-hast": "^13.2.0",
-		"sharp": "^0.33.4"
+		"mdast-util-to-hast": "^13.2.0"
 	},
 	"type": "module"
 }
