--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 	"dependencies": {
 		"front-matter": "^4.0.2",
 		"mdast-util-from-markdown": "^2.0.1",
-		"mdast-util-to-hast": "^13.2.0"
+		"mdast-util-to-hast": "^13.2.0",
+		"sharp": "^0.33.2"
 	},
 	"type": "module"
 }
