--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.6",
 		"@types/eslint": "^8.56.7",
 		"@types/node": "^20.14.8",
 		"eslint": "^9.0.0",
