--- a/package.json
+++ b/package.json
@@ -12,24 +12,23 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.2",
+		"@sveltejs/adapter-static": "^3.0.6",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.7",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/eslint": "^9.6.0",
 		"@types/node": "^20.14.8",
-		"eslint": "^9.0.0",
+		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
+		"prettier": "^3.3.2",
+		"prettier-plugin-svelte": "^3.2.6",
 		"sass": "^1.77.6",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
-		"svelte-preprocess": "^6.0.1",
-		"tslib": "^2.4.1",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0-alpha.20",
+		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
