--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "4.0.0-next.6",
-		"@types/eslint": "^8.56.7",
-		"@types/node": "^20.14.8",
-		"eslint": "^9.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"sass": "^1.77.6",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.6.0",
-		"svelte-preprocess": "^6.0.1",
-		"tslib": "^2.4.1",
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.22.0",
+		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@types/node": "^22.16.0",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^3.0.0",
+		"globals": "^16.0.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"sass": "^1.90.0",
+		"svelte": "^5.25.0",
+		"svelte-check": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0-alpha.20",
-		"vite": "^5.0.3"
+		"typescript-eslint": "^8.20.0",
+		"vite": "^7.0.4"
 	},
 	"dependencies": {
 		"front-matter": "^4.0.2",
-		"mdast-util-from-markdown": "^2.0.1",
+		"mdast-util-from-markdown": "^2.0.2",
 		"mdast-util-to-hast": "^13.2.0",
-		"sharp": "^0.33.4"
+		"sharp": "^0.34.3"
 	},
 	"type": "module"
 }
